# Project3

./: .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
db/: Dockerfile  init.sh
task-manager/: check.py  main.py  models.py  pyproject.toml  test_api.sh
task-manager/scripts/: check.py
ui/: checkScript.js  create_film.html  create_film.jsx  film.html  film.jsx  index.html  main.jsx  package-lock.json  package.json  styles.css  vite.config.js
