[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Omar_A_Lopez <lopezomaralonzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.scripts]
check = "scripts.check:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"